package it.unibs.ing.model;

public interface Observer {
    void update(String messaggio);
}
